bug do header resolvido
erro no link do css do body resolvido

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/bo/main.css">
+    <link rel="stylesheet" href="css/body/main.css">
     <link rel="stylesheet" href="css/header/style.css">
     <title>ifood-clone</title>
 </head>
