--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/body/main.css">
     <link rel="stylesheet" href="css/header/style.css">
+    <link rel="stylesheet" href="css/carrossel01/style.css">
     <title>ifood-clone</title>
 </head>
 
@@ -68,7 +69,22 @@
         </div>
     </header>
 
+    <div class="slider">
+        <div class="s-carrocel">
+            <div class="d_scroll">
+                <button class="s_btn1"></button>
+
+                <div class="s_img i1" ><img src="assets/img/landing-banner-1.png" alt=""></div>
+                <div class="s_img i2" ><img src="assets/img/landing-banner-2.png" alt=""></div>
+                <div class="s_img i3" ><img src="assets/img/landing-banner-3.png" alt=""></div>
+
+                <button class="s_btn2"></button>
+            </div>
+        </div>
+    </div>
+
     <script src="js/header/menu.js"></script>
+    <script src="js/carrossel01/carrossel01.js"></script>
 </body>
 
 </html>
