card_cupom finalizado

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/body/main.css">
     <link rel="stylesheet" href="css/header/style.css">
     <link rel="stylesheet" href="css/carrossel01/style.css">
+    <link rel="stylesheet" href="css/card_cupom/style.css">
     <title>ifood-clone</title>
 </head>
 
@@ -40,6 +41,7 @@
                 <button class="but_entrar">Entrar</button>
             </div>
         </div>
+        
         <div class="h_main">
             <img src="assets/img/ifood-logo-4.png" alt="">
             <h1>
@@ -69,6 +71,16 @@
         </div>
     </header>
 
+    <div class="card_cupom">
+        <svg width="48" height="54" viewBox="0 0 48 54" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M28.152 9.213a1.427 1.427 0 0 1 2.022-.004l3.77 3.77a6.248 6.248 0 0 0 1.032 7.465 6.248 6.248 0 0 0 7.466 1.033l3.672 3.672c.558.558.558 1.461 0 2.019L20.292 52.99a1.427 1.427 0 0 1-2.019 0l-3.848-3.849a6.246 6.246 0 0 0-1.36-6.787 6.246 6.246 0 0 0-6.787-1.36l-3.852-3.851a1.427 1.427 0 0 1-.003-2.015l25.73-25.916z" fill="#FFC50D"></path><mask id="mask0" maskUnits="userSpaceOnUse" x="1" y="8" width="47" height="46"><path fill-rule="evenodd" clip-rule="evenodd" d="M28.152 9.213a1.427 1.427 0 0 1 2.022-.004l3.77 3.77a6.248 6.248 0 0 0 1.032 7.465 6.248 6.248 0 0 0 7.466 1.033l3.672 3.672c.558.558.558 1.461 0 2.019L20.292 52.99a1.427 1.427 0 0 1-2.019 0l-3.848-3.849a6.246 6.246 0 0 0-1.36-6.787 6.246 6.246 0 0 0-6.787-1.36l-3.852-3.851a1.427 1.427 0 0 1-.003-2.015l25.73-25.916z" fill="#C4C4C4"></path></mask><g mask="url(#mask0)"><path d="M29.172 7.34l18.57 18.57-8.9 8.899-18.57-18.57 8.9-8.899z" fill="#FB5546"></path></g><path fill-rule="evenodd" clip-rule="evenodd" d="M22.414 18.282a.635.635 0 0 1 .898 0l1.165 1.164a.635.635 0 0 1-.898.898l-1.165-1.164a.635.635 0 0 1 0-.898zm3.493 3.492a.635.635 0 0 1 .898 0l2.329 2.329a.635.635 0 0 1-.898.898l-2.329-2.329a.635.635 0 0 1 0-.898zm4.657 4.657a.635.635 0 0 1 .898 0l2.329 2.329a.635.635 0 0 1-.898.898l-2.329-2.329a.635.635 0 0 1 0-.898zm4.657 4.657a.635.635 0 0 1 .898 0l1.165 1.165a.635.635 0 0 1-.898.898l-1.165-1.164a.635.635 0 0 1 0-.898z" fill="#A40867"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M4.643 37.784a2.274 2.274 0 0 1 0-3.216L14.73 24.48a.847.847 0 0 1 1.198 1.197L5.84 35.765a.58.58 0 0 0 0 .821l.059.06a.847.847 0 0 1-1.198 1.197l-.059-.06zM18.381 22.365c.33.33.33.867 0 1.198l-.423.423a.847.847 0 0 1-1.198-1.197l.424-.424a.847.847 0 0 1 1.197 0z" fill="#fff"></path><path d="M12.357 36.02a.384.384 0 0 1-.119-.303.426.426 0 0 1 .43-.43l15.903-.147a.407.407 0 0 1 .422.423.426.426 0 0 1-.43.43l-15.902.147a.457.457 0 0 1-.304-.12z" fill="#FB5546"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M11.977 35.995a.748.748 0 0 1-.045-.274.741.741 0 0 1 .742-.742l15.902-.146a.708.708 0 0 1 .727.726.741.741 0 0 1-.742.742l-15.902.147a.756.756 0 0 1-.52-.207.69.69 0 0 1-.162-.246zm.263-.277a.384.384 0 0 0 .119.303c.06.06.182.12.303.12l15.903-.148a.426.426 0 0 0 .43-.43.407.407 0 0 0-.422-.423l-15.903.147a.426.426 0 0 0-.43.43z" fill="#FB5546"></path><path d="M18.666 32.246c-.966-.966-.982-2.58.033-3.595 1.015-1.015 2.599-1.03 3.595-.033.996.996.982 2.58-.033 3.595-1.015 1.014-2.599 1.029-3.595.033zm3.013-3.013a1.682 1.682 0 0 0-2.376.022c-.646.645-.686 1.712-.022 2.376.664.664 1.7.654 2.376-.022.646-.646.686-1.712.022-2.376z" fill="#FB5546"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M18.448 32.466c-1.082-1.082-1.101-2.891.038-4.03 1.137-1.137 2.916-1.152 4.03-.038 1.115 1.115 1.1 2.894-.037 4.03-1.137 1.137-2.916 1.153-4.03.038zm3.014-3.013a1.375 1.375 0 0 0-1.941.018c-.528.527-.56 1.398-.018 1.94.546.546 1.387.537 1.941-.017.527-.527.56-1.399.018-1.941zm-2.76-.802c-1.015 1.015-1 2.63-.034 3.595.996.996 2.58.982 3.595-.033 1.015-1.015 1.03-2.599.033-3.595-.996-.996-2.58-.981-3.595.033zm.603.604a1.682 1.682 0 0 1 2.376-.022c.665.664.624 1.73-.021 2.376-.677.677-1.713.686-2.377.022-.664-.664-.623-1.73.022-2.376z" fill="#FB5546"></path><path d="M18.907 42.632c-.966-.966-.982-2.58.033-3.595.984-.984 2.599-1.03 3.595-.033.996.996.981 2.58-.034 3.594-1.014 1.015-2.629 1-3.595.034zm3.013-3.014a1.682 1.682 0 0 0-2.377.022c-.645.646-.686 1.713-.021 2.377.664.664 1.7.654 2.376-.022.645-.646.656-1.743.022-2.377z" fill="#FB5546"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M18.685 42.852c-1.082-1.082-1.101-2.891.038-4.03 1.104-1.104 2.913-1.155 4.03-.038 1.115 1.115 1.1 2.894-.037 4.03-1.14 1.14-2.949 1.12-4.03.038zm3.014-3.013a1.375 1.375 0 0 0-1.941.017c-.528.528-.56 1.4-.018 1.941.546.546 1.387.537 1.941-.017.524-.524.533-1.426.017-1.941zm-2.76-.802c-1.015 1.015-1 2.63-.034 3.595.966.966 2.58.982 3.595-.033 1.015-1.015 1.03-2.599.033-3.595-.996-.996-2.61-.95-3.595.033zm.603.604a1.682 1.682 0 0 1 2.377-.022c.633.634.623 1.73-.022 2.376-.677.677-1.713.686-2.377.022-.664-.664-.623-1.73.022-2.376z" fill="#FB5546"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M1.96 1.62l1.603 2.16.002.004a.831.831 0 0 0 .64.316c.17 0 .328-.08.435-.133l.015-.008.019-.01.016-.012c.351-.272.442-.758.158-1.124L3.248.655 3.245.651c-.273-.35-.76-.44-1.127-.155-.35.272-.441.757-.158 1.123zM4.897 5.584l6.88 9.292.003.004a.831.831 0 0 0 .64.315.782.782 0 0 0 .483-.16l.003-.002c.35-.272.44-.758.157-1.124L6.185 4.62l-.003-.004c-.274-.35-.76-.44-1.127-.156-.351.273-.441.758-.158 1.124z" fill="#9C71D0"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M11.242 3.193l3.706 10.264v.002a.82.82 0 0 0 .762.522.533.533 0 0 0 .144-.018h.001l.047-.01.016-.001h.04l.038-.015c.39-.156.64-.624.476-1.041L12.765 2.628l-.002-.003c-.156-.39-.627-.64-1.046-.473-.39.155-.64.623-.475 1.04z" fill="#FB5546"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M8.53 17.583l1.597 1.18a.781.781 0 0 0 1.128-.193c.273-.357.2-.878-.17-1.127l-1.595-1.15c-.366-.28-.851-.191-1.124.159-.278.357-.207.88.164 1.131zM1.391 12.355l5.245 3.814c.159.118.323.16.481.16.122 0 .25-.03.362-.084A.688.688 0 0 0 7.766 16c.27-.357.196-.874-.172-1.122l-5.243-3.813c-.357-.274-.878-.204-1.129.164-.273.357-.2.877.17 1.126z" fill="#51B6DC"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M1.776 21.135l6.329 1.652a.447.447 0 0 0 .216.042h.005a.783.783 0 0 0 .768-.602.786.786 0 0 0-.564-.968l-6.345-1.657a.787.787 0 0 0-.972.56.785.785 0 0 0 .563.973z" fill="#FB5546"></path></svg>
+        <div class="cc_textos">
+            <p class="cc_p1">Ganhe cupons!</p>
+            <p class="cc_p2">Crie sua conta para ter acesso a descontos</p>
+            <button class="cc_btn_criar"><span>Criar conta</span></button>
+        </div>
+        <button class="cc_btn_fechar"><span class="cc_x">X</span></button>
+    </div>
+
     <div class="slider">
         <div class="s-carrocel">
             <div class="d_scroll">
@@ -85,6 +97,7 @@
 
     <script src="js/header/menu.js"></script>
     <script src="js/carrossel01/carrossel01.js"></script>
+    <script src="js/card_cupom/fechar_card.js"></script>
 </body>
 
 </html>
