--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/carrossel01/style.css">
     <link rel="stylesheet" href="css/card_cupom/style.css">
     <link rel="stylesheet" href="css/best/style.css">
+    <link rel="stylesheet" href="css/cidades/style.css">
     <title>ifood-clone</title>
 </head>
 
@@ -732,6 +733,35 @@
                 </div>
             </div>
 
+        </div>
+    </div>
+
+    <div class="cidades">
+        <div class="cidades_titulo">
+            <h2>Explore por cidades</h2>
+            <a href="#">Ver todas</a>
+        </div>
+        <div class="cidades_lista">
+            <ul>
+                <li><a href="#">Belo Horizonte</a></li>
+                <li><a href="#">Brasília</a></li>
+                <li><a href="#">Campinas</a></li>
+                <li><a href="#">Curitiba</a></li>
+                <li><a href="#">Goiânia</a></li>
+                <li><a href="#">Guarulhos</a></li>
+                <li><a href="#">João Pessoa</a></li>
+                <li><a href="#">Natal</a></li>
+                <li><a href="#">Niterói</a></li>
+                <li><a href="#">Porto Alegre</a></li>
+                <li><a href="#">Ribeirão Preto</a></li>
+                <li><a href="#">Rio de Janeiro</a></li>
+                <li><a href="#">Salvador</a></li>
+                <li><a href="#">Santo André</a></li>
+                <li><a href="#">Santos</a></li>
+                <li><a href="#">São Bernado do Campo</a></li>
+                <li><a href="#">São Caetano do sul</a></li>
+                <li><a href="#">São Paulo</a></li>
+            </ul>
         </div>
     </div>
 
