--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/card_cupom/style.css">
     <link rel="stylesheet" href="css/best/style.css">
     <link rel="stylesheet" href="css/cidades/style.css">
+    <link rel="stylesheet" href="css/aquisicao/style.css">
     <title>ifood-clone</title>
 </head>
 
@@ -763,6 +764,32 @@
                 <li><a href="#">São Paulo</a></li>
             </ul>
         </div>
+    </div>
+
+    <div class="aquisicao">
+        <ul>
+            <li>
+                <a href="#">
+                    <img src="assets/img/acquisition-moto.png" alt="">
+                    <span class="as1">Quer fazer entregas pelo iFood?</span>
+                    <span class="as2">Cadastre-se para fazer entregas</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="assets/img/acquisition-restaurant.png" alt="">
+                    <span class="as1">A sua fome de crescer está no iFood</span>
+                    <span class="as2">Cadastre seu restaurante</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="assets/img/acquisition-foodlover.png" alt="">
+                    <span class="as1">Quer ser um Foodlover?</span>
+                    <span class="as2">Confira as vagas em aberto</span>
+                </a>
+            </li>
+        </ul>
     </div>
 
     <script src="js/header/menu.js"></script>
