ifood_card finalizado

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/best/style.css">
     <link rel="stylesheet" href="css/cidades/style.css">
     <link rel="stylesheet" href="css/aquisicao/style.css">
+    <link rel="stylesheet" href="css/ifood_card/style.css">
     <title>ifood-clone</title>
 </head>
 
@@ -791,6 +792,14 @@
             </li>
         </ul>
     </div>
+
+    <div class="ifood_card">
+        <picture>
+            <source media="(max-width: 770px)" srcset="assets/img/ifood-companies-mobile-br.png">
+            <img src="assets/img/ifood-companies-desktop-br.png" alt="">
+        </picture>
+    </div>
+
 
     <script src="js/header/menu.js"></script>
     <script src="js/carrossel01/carrossel01.js"></script>
