--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/cidades/style.css">
     <link rel="stylesheet" href="css/aquisicao/style.css">
     <link rel="stylesheet" href="css/ifood_card/style.css">
+    <link rel="stylesheet" href="css/footer/style.css">
     <title>ifood-clone</title>
 </head>
 
@@ -800,6 +801,68 @@
         </picture>
     </div>
 
+    <footer>
+        <section class="f_sobre">
+            <div class="sobre_c">
+                <h3>iFood</h3>
+                <ul>
+                    <li><a href="#">Site Institucional</a></li>
+                    <li><a href="#">Fale Conosco</a></li>
+                    <li><a href="#">Carreiras</a></li>
+                    <li><a href="#">iFood Colômbia</a></li>
+                </ul>
+            </div>
+            <div class="sobre_c">
+                <h3>Descubra</h3>
+                <ul>
+                    <li><a href="#">Cadastre seu Restaurante ou Mercado</a></li>
+                    <li><a href="#">iFood Shop</a></li>
+                    <li><a href="#">iFood Empresas</a></li>
+                    <li><a href="#">Blog iFood Empresas</a></li>
+                </ul>
+            </div>
+            <div class="sobre_c">
+                <h3>Social</h3>
+                <ul class="social">
+                    <li><a href="#">
+                        <img src="assets/img/faceboook.png" alt="" width="30px" height="30px">
+                    </a></li>
+                    <li><a href="#">
+                        <img src="assets/img/tweet.png" alt="" width="30px" height="30px">
+                    </a></li>
+                    <li><a href="#">
+                        <img src="assets/img/instagram.png" alt="" width="30px" height="30px">
+                    </a></li>
+                    <li><a href="#">
+                        <img src="assets/img/youtube.png" alt="" width="30px" height="30px">
+                    </a></li>
+                </ul>
+            </div>
+        </section>
+        <section class="f_cr">
+            <div class="cr_texto">
+                <a href="#">
+                    <img src="assets/img/ifood-footer.png" alt="" width="50px" height="50px">
+                </a>
+                <p>
+                    © Copyright 2021 - iFood - Todos os direitos
+                    reservados iFood com Agência de Restaurantes Online S.A. 
+                </p>
+                <p>
+                    CNPJ 14.380.200/0001-21 / Avenida dos Autonomistas, nº 1496, 
+                    Vila Yara, Osasco/SP - CEP 06.020-902
+                </p>
+            </div>
+            <div class="cr_links">
+                <ul>
+                    <li><a href="#">Termos e condições de uso</a></li>
+                    <li><a href="#">Coigo de conduta</a></li>
+                    <li><a href="#">Privacidade</a></li>
+                    <li><a href="#">Dicas de segurança</a></li>
+                </ul>
+            </div>
+        </section>
+    </footer>
 
     <script src="js/header/menu.js"></script>
     <script src="js/carrossel01/carrossel01.js"></script>
